--- a/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
+++ b/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
@@ -905,7 +905,7 @@
         <mat-card class="first-wrap line-height mat-card-sd card-table">
           <div class="col-md-9"><span class="header-text-style">Speaker Expenses: Jack Aaron</span></div>
           <div class="col-md-3">
-            <button class="btn view-details-custom fnt-weigth pull-right"> Add Expense </button>
+            <button class="btn view-details-custom-attendee fnt-weigth pull-right"> Add Expense </button>
           </div>
           <div class="clearfix"></div>
           <div class="col-md-12">
