upcoming filter done and master heading color changed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 dashboard-admin-wrapper">
   <mat-card>
     <div class="col-md-12 dashboard-heading-wrapper">
-      <p><span class="master-heading"> Upcoming Programs </span> <span class="clr-blue">View All</span></p> 
+      <p><span class="master-heading"> Upcoming Programs </span> <span class="clr-blue" routerLink="/upcoming-filter">View All</span></p> 
       <hr> 
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
