--- a/src/app/add-venue/add-venue.component.css
+++ b/src/app/add-venue/add-venue.component.css
@@ -42,7 +42,8 @@
 }
 .master-heading{
     font-size: 30px;
-    color: blue;
+    color: #2B62CA;
+    font-weight: bold;
 }
 .para-heading{   
     color: #2B62CA; margin-bottom: 25px;	font-family: "Helvetica Neue";	font-size: 20px;	line-height: 22px;
