--- a/src/app/manage-spkeaker-content/manage-spkeaker-content.component.css
+++ b/src/app/manage-spkeaker-content/manage-spkeaker-content.component.css
@@ -39,7 +39,8 @@
 }
 .master-heading{
     font-size: 30px;
-    color: blue;
+    color: #2B62CA;
+    font-weight: bold;
 }
 .mat-check-wrap label{
     color: #757575;	font-family: "Helvetica Neue";	font-size: 14px;	line-height: 16px;
