--- a/src/app/attendee-list/attendee-list.component.html
+++ b/src/app/attendee-list/attendee-list.component.html
@@ -35,6 +35,30 @@
 		</div>
 	    <div class="AD-training-material-wrapper">
 	        <div class="col-md-12 even-content-panel pad-left">
+						<div class="row">
+								<div class="col-md-4">
+									<ul>
+										<li><b>Totals:</b> 07</li>
+										<li><b>No Response:</b> 05</li>
+									</ul>
+								</div>
+
+								<div class="col-md-4">
+									<ul>
+										<li><b>Unrestricted:</b> 05</li>
+										<li><b>Declined:</b> 00</li>
+									</ul>
+								</div>
+
+								<div class="col-md-4">
+									<ul>
+										<li><b>Accepted:</b> 00</li>
+									</ul>
+								</div>
+								<div class="col-md-12">
+									<hr class="hr-color">
+								</div>
+						</div>
 	          <div class="row">
 	            <div class="col-md-4">
 	              <ul>
