--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -82,7 +82,7 @@
     
       <div class="col-md-4">
         <ul>
-          <li></li>
+          <li class="hidden-xs hidden-sm"></li>
           <li><b>Time Zone:</b> Atlantic</li>
         </ul>
       </div>
@@ -178,7 +178,7 @@
           <div class="row">
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Name:</b> Michela Aab</li>
                 <li><b>City & State:</b> Fort Worth, TX</li>
                 <li><b>Phone Number:</b> 817-923-2677</li>
@@ -186,7 +186,7 @@
             </div>
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Date of Registration:</b> 02/20/2019</li>
                 <label>Status</label>
                   <mat-form-field>
@@ -220,7 +220,7 @@
           <div class="row">
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Name:</b> Michela Aab</li>
                 <li><b>City & State:</b> Fort Worth, TX</li>
                 <li><b>Phone Number:</b> 817-923-2677</li>
@@ -228,7 +228,7 @@
             </div>
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Date of Registration:</b> 02/20/2019</li>
                 <label>Status</label>
                   <mat-form-field>
@@ -262,7 +262,7 @@
           <div class="row">
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Name:</b> Michela Aab</li>
                 <li><b>City & State:</b> Fort Worth, TX</li>
                 <li><b>Phone Number:</b> 817-923-2677</li>
@@ -270,7 +270,7 @@
             </div>
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Date of Registration:</b> 02/20/2019</li>
                 <label>Status</label>
                   <mat-form-field>
@@ -304,7 +304,7 @@
           <div class="row">
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Name:</b> Michela Aab</li>
                 <li><b>City & State:</b> Fort Worth, TX</li>
                 <li><b>Phone Number:</b> 817-923-2677</li>
@@ -312,7 +312,7 @@
             </div>
             <div class="col-md-4">
               <ul>
-                <li></li>
+                <li class="hidden-xs hidden-sm"></li>
                 <li><b>Date of Registration:</b> 02/20/2019</li>
                 <label>Status</label>
                   <mat-form-field>
@@ -397,13 +397,13 @@
                 <span class="subtitle-speaker-exp">Speaker Jack Aaron Expenses $1,040.00</span>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <span class="subtitl-exp-blue pull-right">Patient Speaker Expense</span>
+                <span class="subtitl-exp-blue">Patient Speaker Expense</span>
             </div>
 
           </div>
         </div>
 
-        <div class="col-md-3 top-mar">
+        <div class="col-md-3 col-sm-3 top-mar">
           <ul>
             <li><b>Expense Type</b></li>
             <li>Airfare</li>
@@ -412,7 +412,7 @@
             <li>Other</li>
           </ul>
         </div>
-        <div class="col-md-3 top-mar">
+        <div class="col-md-3 col-sm-3 top-mar">
           <ul>
             <li><b>Expenses</b></li>
             <li>$000.00</li>
