Upload references changes completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
               <a [routerLink]="['/upload-reference']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/training.svg" class="img-responsive" />
-                  UPLOAD REFERENCE MATERIAL
+                  REFERENCE MATERIALS
                 </span>
               </a>
             </li>
