--- a/src/app/upload-referances/upload-referances.component.html
+++ b/src/app/upload-referances/upload-referances.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 assign-content-wrapper">
     <mat-card>
       <div class="col-md-12">
-        <div class="master-heading"> Assign Content</div>
+        <div class="master-heading"> Upload Reference Material</div>
         <div class="clearfix"></div>
         <hr>
         <div class="row">
@@ -26,62 +26,34 @@
               </mat-form-field>
             </div>
           </div> 
-          <div class="clearfix"></div>
+          
           <div class="mat-check-wrap">
             
-            <div class="col-md-12">
+            <div class="col-md-4">
               
-              <label>Access Roll</label>
+              <label>Access Role</label>
               <div class="row">
-              <div class="clearfix"></div>
-              <div class="col-md-3">
-                <mat-checkbox>Admin</mat-checkbox>
+              
+              <div class="col-md-6">
+                <mat-checkbox>Super Admin</mat-checkbox>
               </div>
-              <div class="col-md-3">
-                <mat-checkbox>Brand Manager</mat-checkbox>
-              </div>
-              <div class="col-md-3">
-                <mat-checkbox>National Manager</mat-checkbox>
-              </div>
-              <div class="col-md-3">
-                  <mat-checkbox>Marketing Manager</mat-checkbox>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-md-3">
-                <mat-checkbox>Marketing Manager</mat-checkbox>
-              </div>
-              <div class="col-md-3">
-                <mat-checkbox>Coordinator</mat-checkbox>
-              </div>
-              <div class="col-md-3">
-                <mat-checkbox>MSL</mat-checkbox>
-              </div>
-              <div class="col-md-3">
-                  <mat-checkbox>SUPER MSL</mat-checkbox>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-md-3">
-                <mat-checkbox>Sales Rep</mat-checkbox>
-              </div>
-              <div class="col-md-3">
+              <div class="col-md-6">
                 <mat-checkbox>Speaker</mat-checkbox>
               </div>
-              <div class="col-md-3">
-                <mat-checkbox>GMH Admin</mat-checkbox>
+              <div class="clearfix"></div>
+              <div class="col-md-6">
+                <mat-checkbox>Brand Admin</mat-checkbox>
               </div>
-              <div class="col-md-3">
-                  <mat-checkbox>Admin Read Only</mat-checkbox>
+              <div class="col-md-6">
+                  <mat-checkbox>Marketing</mat-checkbox>
               </div>
               <div class="clearfix"></div>
-              <div class="col-md-3">
-                <mat-checkbox>District Manager</mat-checkbox>
+              <div class="col-md-6">
+                <mat-checkbox>Sales Rep</mat-checkbox>
               </div>
-              <div class="col-md-3">
-                <mat-checkbox>Regional Manager</mat-checkbox>
-              </div>
-              <div class="col-md-3">
-                <mat-checkbox>Global Admin</mat-checkbox>
-              </div> 
+              
+              <div class="clearfix"></div>
+        
             </div>
           </div>  
               <div class="clearfix"></div>
